// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package things.v1;
option go_package = "github.com/absmach/supermq/internal/grpc/things/v1";

import "common/v1/common.proto";

// ThingsService is a service that provides things authorization functionalities
// for magistrala services.
service ThingsService {
  // Authorize checks if the thing is authorized to perform
  rpc Authenticate(AuthnReq) returns (AuthnRes) {}
  rpc RetrieveEntity(common.v1.RetrieveEntityReq) returns (common.v1.RetrieveEntityRes) {}
  rpc RetrieveEntities(common.v1.RetrieveEntitiesReq) returns (common.v1.RetrieveEntitiesRes) {}
  rpc AddConnections(common.v1.AddConnectionsReq)returns(common.v1.AddConnectionsRes) {}
  rpc RemoveConnections(common.v1.RemoveConnectionsReq)returns(common.v1.RemoveConnectionsRes) {}
  rpc RemoveChannelConnections(RemoveChannelConnectionsReq)returns(RemoveChannelConnectionsRes) {}
  rpc UnsetParentGroupFromThings(UnsetParentGroupFromThingsReq)returns(UnsetParentGroupFromThingsRes){}
}


message AuthnReq {
  string thing_id = 1;
  string thing_key = 2;
}

message AuthnRes {
  bool authenticated = 1;
  string id = 2;
}

message RemoveChannelConnectionsReq {
  string channel_id = 1;
}

message RemoveChannelConnectionsRes {}

message UnsetParentGroupFromThingsReq {
  string parent_group_id = 1;
}

message UnsetParentGroupFromThingsRes {}
